[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
aasdk = { path = "../aasdk" }

openssl = { version = "0.10", features = ["vendored"] }

# logging
log = "0.4"
env_logger = "0.9"
colored = "2.0.0"
chrono = "0.4"

