[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

# logging
log = "0.4"
env_logger = "0.9"
colored = "2.0.0"
chrono = "0.4"

# other packages
openssl = { version = "0.10", features = ["vendored"] }
bitflags = "1.3.2"
# ssh2 = "0.9.3"
